# ws_PortableXY

./: .gitignore  stm32g070-portablexy-fw_rtos.code-workspace
stm32g070-portablexy-fw_rtos/: CMakeLists.txt
stm32g070-portablexy-fw_rtos/src/: main.cpp  main.h
stm32g070-portablexy-fw_rtos/src/ap/: ap.cpp  ap_def.h
stm32g070-portablexy-fw_rtos/src/ap/_inc/: ap_dat.hpp  api_lcd.hpp  api_remote.hpp  cnAuto.hpp  cnMotors.hpp  cnTasks.hpp  enMotor_moons.hpp  uart_moons.hpp  uart_nextion.hpp  uart_remote.hpp
stm32g070-portablexy-fw_rtos/src/ap/api/: api_lcd.cpp  api_remote.cpp  nextion_packet.txt
stm32g070-portablexy-fw_rtos/src/ap/cn/: cnTasks.cpp
stm32g070-portablexy-fw_rtos/src/bsp/: bsp.c  bsp.h  rtos.c  stm32g0xx_hal_conf.h  stm32g0xx_hal_msp.c  system_stm32g0xx.c
stm32g070-portablexy-fw_rtos/src/common/: def.h
stm32g070-portablexy-fw_rtos/src/common/core/: utils.h
stm32g070-portablexy-fw_rtos/src/hw/: hw.c  hw.h  hw_def.h
stm32g070-portablexy-fw_rtos/src/hw/driver/: gpio.c  i2c.c  led.c  rtc.c  uart.c
stm32g070rbt6_cube/: stm32g070rbt6_cube.ioc  stm32g070rbt6_cube.txt
stm32g070rbt6_cube/App/: ap.cpp  ap.hpp
stm32g070rbt6_cube/App/ap/: ap.cpp  ap.hpp  ap_def.h  def_obj.hpp
stm32g070rbt6_cube/App/bsp/: bsp.h
stm32g070rbt6_cube/App/exhw/: exhw.c  exhw.h  exhw_def.h
stm32g070rbt6_cube/App/hw/: hw.c  hw.h  hw_def.h
stm32g070rbt6_cube/App/include/: led.h
stm32g070rbt6_cube/App/src/: led.c  uart.c
stm32g070rbt6_cube/Core/Inc/: stm32g0xx_hal_conf.h  stm32g0xx_it.h
stm32g070rbt6_cube/Core/Src/: main.c  main.cpp  stm32g0xx_hal_msp.c  stm32g0xx_it.c
stm32g070rbt6_cube_fw/: CMakeLists.txt  stm32g070rbt6_cube_fw.ioc
stm32g070rbt6_cube_fw/App/ap/: ap.cpp  ap.hpp  ap_def.h
stm32g070rbt6_cube_fw/App/bsp/: bsp.c
stm32g070rbt6_cube_fw/App/common/: def.h
stm32g070rbt6_cube_fw/App/hw/: hw.c  hw.h  hw_def.h
stm32g070rbt6_cube_fw/Core/Inc/: main.h  stm32g0xx_it.h
stm32g070rbt6_cube_fw/Core/Src/: main.c  main.cpp  stm32g0xx_hal_msp.c
stm32g070rbt6_cube_fw/cmake/: gcc-arm-none-eabi.cmake  st-project.cmake
stm32g070rbt6_cube_fw_rtos/: .mxproject  STM32G070RBTX_FLASH.ld  stm32g070rbt6_cube_fw_rtos.ioc
stm32g070rbt6_cube_fw_rtos/App/ap/: ap.cpp
stm32g070rbt6_rtos/App/ap/: ap.cpp
(+44 files in other folders)
